@@ -186,6 +186,9 @@
 <!-- LUKS -->
 <!ENTITY url-luks "http://luks.endorphin.org/">
 
+<!-- US keyboard layout -->
+<!ENTITY url-us-keymap "http://en.wikipedia.org/wiki/Keymap#US">
+
 
 <!-- ******************************************
   HOWTOs and FAQs (general)
