@@ -335,54 +335,98 @@ provides bootdiskettes and even bootroms that do a TFTPboot.
    </sect3>
   </sect2>
 
-  <sect2 arch="x86"><title>The Boot Prompt</title>
+  <sect2 arch="x86" id="boot-screen">
+  <title>The Boot Screen</title>
 <para>
 
 When the installer boots, you should be presented with a friendly graphical
-screen showing the Debian logo and the boot prompt:
+screen showing the Debian logo and a menu:
 
 <informalexample><screen>
-Press F1 for help, or ENTER to boot:
+Installer boot menu
+
+Install
+Graphical install
+Advanced options       >
+Help
+
+Press ENTER to boot or TAB to edit a menu entry
 </screen></informalexample>
 
-At the boot prompt
-you can either just press &enterkey; to boot the installer with
-default options or enter a specific boot method and, optionally, boot
-parameters.
+Depending on the installation method you are using, the <quote>Graphical
+install</quote> option may not be available.
 
 </para><para>
 
-Information on available boot methods and on boot parameters which might
-be useful can be found by pressing <keycap>F2</keycap> through
-<keycap>F8</keycap>. If you add any parameters to
-the boot command line, be sure to type the boot method (the default is
-<userinput>install</userinput>) and a space before the first parameter (e.g.,
-<userinput>install fb=false</userinput>).
+For a normal installation, select either the <quote>Install</quote> or
+the <quote>Graphical install</quote> entry  &mdash; using either the
+arrow keys on your keyboard or by typing the first (highlighted) letter
+&mdash; and press &enterkey; to boot the installer.
 
+</para><para>
+
+The <quote>Advanced options</quote> entry gives access to a second menu
+that allows to boot the installer in expert mode, in rescue mode and for
+automated installs.
+
+</para><para>
+
+If you wish or need to add any boot parameters for either the installer
+or the kernel, press &tabkey;. This will display the default boot command
+for the selected menu entry and allow to add additional options. The help
+screens (see below) list some common possible options. Press &enterkey; to
+boot the installer with your options; pressing &escapekey; will return you
+to the boot menu.
+
+</para><para>
+
+Choosing the <quote>Help</quote> entry will result in the first help screen
+being displayed which gives an overview of all available help screens.
+Note that it is not possible to return to the boot menu after the help
+screens have been displayed. However, the F3 and F4 help screens list
+commands that are equivalent to the boot methods listed in the menu. All
+help screens have a boot prompt at which the boot command can be typed:
+
+<informalexample><screen>
+Press F1 for the help index, or ENTER to boot:
+</screen></informalexample>
+
+At this boot prompt you can either just press &enterkey; to boot the
+installer with default options or enter a specific boot command and,
+optionally, boot parameters. A number of boot parameters which might be
+useful can be found on the various help screens. If you do add any
+parameters to the boot command line, be sure to first type the boot method
+(the default is <userinput>install</userinput>) and a space before the
+first parameter (e.g., <userinput>install fb=false</userinput>).
+
+<note><para>
+
+The keyboard is assumed to have a default American English layout at this
+point. This means that if your keyboard has a different (language-specific)
+layout, the characters that appear on the screen may be different from what
+you'd expect when you type parameters. Wikipedia has a
+<ulink url="&url-us-keymap;">schema of the US keyboard layout</ulink> which
+can be used as a reference to find the correct keys to use.
+
+</para></note>
 <note><para>
 
 If you are installing the system via a remote management device that
 provides a text interface to the VGA console, you may not be able to
 see the initial graphical splash screen upon booting the installer;
-you may even not see the boot prompt. Examples of these devices include
+you may even not see the boot menu. Examples of these devices include
 the text console of Compaq's <quote>integrated Lights Out</quote> (iLO)
 and HP's <quote>Integrated Remote Assistant</quote> (IRA).
-You can blindly press F1<footnote>
 
-<para>
+</para><para>
 
-In some cases these devices will require special escape sequences to
-enact this keypress, for example the IRA uses <keycombo> <keycap>Ctrl</keycap>
-<keycap>F</keycap> </keycombo>,&nbsp;<keycap>1</keycap>.
-
-</para>
-
-</footnote> to bypass this screen and view the help text. Once you are
-past the splash screen and at the help text your keystrokes will be echoed
-at the prompt as expected. To prevent the installer from using the
-framebuffer for the rest of the installation, you will also want to add
-<userinput>fb=false</userinput> to the boot prompt,
-as described in the help text.
+To bypass the graphical boot screen you can either blindly press &escapekey;
+to get a text boot prompt, or (equally blindly) press <quote>H</quote>
+followed by &enterkey; to select the <quote>Help</quote> option described
+above. After that your keystrokes should be echoed at the prompt.
+To prevent the installer from using the framebuffer for the rest of the
+installation, you will also want to add <userinput>fb=false</userinput> to
+the boot prompt, as described in the help text.
 
 </para></note>
 </para>
