@@ -38,11 +38,12 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Document finish-install/keep-consoles boot parameter and preseeding.
   * Define two new translatable entities: escapekey and tabkey.
   * Update task sizes, and number of packages and developers.
+  * x86: update description of the boot screen for the new syslinux vesamenu.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
 
- -- Frans Pop <fjp@debian.org>  Fri, 09 May 2008 22:21:38 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 10 May 2008 17:59:43 +0200
 
 installation-guide (20080211) unstable; urgency=low
 
